# dualsense-cmd

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  index.html  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml
config/: axidraw.json  config.json  curl-commands.json  websocket-spatial-streaming.json  websocket-streaming.json
scripts/: build-release.sh  build.sh
src/: App.tsx  config.rs  dualsense.rs  executor.rs  lib.rs  main.rs  main.tsx  profile.rs  renderer.rs  shader.wgsl  spatial.rs  websocket.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
